static/wordstyle.css
main {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    background-color: lightslategray;
}

body {
  width: 75%;
  margin-left: 12%;
}

nav {
  background-color: lightslategray;
  border: darkgray 1px solid;
}

nav h1 {
  display: block;
  color: white;
  text-shadow: 2px 2px slategray;
  font-size: 40px;
  margin: 10px;
  padding: 2px;
  text-align: center;
}

nav p {
  display: block;
  text-align: right;
  color: darkgray;
  margin: 15px;
}

footer {
  background-color: lightslategray;
  position: relative;
  border: darkgray 1px solid;
  height: 30px;
}

footer a {
  text-decoration: none;
  color:white;
  font-size: 20px;
  margin: 15px;
  padding-left: 10px;
}

.git{
  position: relative;
  width: 25%;
  left: 90%;
}

.wordbox {
    text-align: center;
    border: solid white;
    margin: 3px;

}

.w_button {
  background-color: lightslategray;
  width: 100%;
  font-size: 16px;
  color: white;
}

.modal {
  display: none;
  position: fixed;
  top: 25%;
  left: 15%;
  min-width: 30%;
  max-width: 80%;
  max-height: 60%;
  border: solid slategray 2px;
  background-color: white;
  overflow-y: scroll;
  z-index: 3;
}
.modal-content {
  margin: auto;
  padding-right: 10px;
  padding-left: 2px;
}

.close {
  color: #aaaaaa;
  font-size: 28px;
  font-weight: bold;
  position: absolute;
  left: 95%;
  padding-bottom: 5px;
  margin-right: 5px;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

